fix: Printando as mensagens de cada aviao junto